--- a/README.rdoc
+++ b/README.rdoc
@@ -31,6 +31,18 @@ setting the fonts path and mounting the app in your routes.rb file:
     mount Rack::Fontserve, :at => "/fonts" 
     
 You can see a demo of all fonts in the fonts_path at /demo
+
+== Custom font CSS
+
+When a `font_name.css` file is found in the subdirectory, this file will be rendered instead of the auto-generated css. If you
+want to tweak your css settings, copy and paste the auto-generated css into such a file and customize it to your liking!
+
+== Incorporate font licenses into CSS
+
+If you place a text file named LICENSE inside some font's subdirectory, this file's content will automatically be added as a
+CSS comment at the top of your auto-generated CSS. This won't happen when using custom css, so make sure your custom css has 
+the license added as you want it.
+
     
 == TODO
 
