Added ability to deactivate demo

--- a/README.rdoc
+++ b/README.rdoc
@@ -30,7 +30,7 @@ setting the fonts path and mounting the app in your routes.rb file:
 
     mount Rack::Fontserve, :at => "/fonts" 
     
-You can see a demo of all fonts in the fonts_path at /demo.
+You can see a demo of all fonts in the fonts_path at the root page (/). To deactivate demo mode, use `Rack::Fontserve.set :demo, false`.
 
 The font name is the name of the font's directory, so in the above example, the font would be called 'iconic_stroke'.
 
